--- a/Backend/Panel.html
+++ b/Backend/Panel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title></title>
+    <title>Back End Panel</title>
 </head>
 <body>
 
@@ -15,6 +15,9 @@
         <li><a href="https://ryderishere.github.io/projects/Backend/Test.html">Demo Test 
             Page</a></li>
         <li><a href="https://ryderishere.github.io/projects/">Home</a></li>
+        <li><a href="https://ryderishere.github.io/projects/Backend/home.html">View Early 
+            Home</a></li>
+        <li><a href="https://github.com/ryderishere/projects">View Main GITHUB</a></li>
     </ul>
 
 </body>
